[metadata]
name = parallel_tasks
version = 0.7.0
description = simplified multithreaded batch tasks in python with callbacks
author = ARX8x
author_email = arx8x@pm.me
url = https://github.com/arx8x/py-parallel-tasks
keywords = multithread, batch, task, mutitask, threading
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires =
